# easypwned

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build  build.rs  package.json  pws.txt  tailwind  tailwind.config.js  yarn
.docker/easypwned_bloom_001/: Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yaml  compile.yml  release.yaml
.github/workflows/resuseable/: rust_prepare.yml
downloader/: Cargo.toml
downloader/src/: download_coordinator.rs  downloader_http.rs  main.rs
downloader/src/sink/: bloom.rs  mod.rs  stdout.rs
easypwned/: Cargo.toml  Dioxus.toml
easypwned/src/: backend.rs  lib.rs  main.rs
easypwned/tests/: api_tests.rs
easypwned_bloom/: Cargo.toml
easypwned_bloom/src/: lib.rs
easypwned_bloom/src/bloom/: mod.rs
easypwned_bloom/tests/: bloom_tests.rs
k8s/: argocd-application.yaml  deployment.yaml  ingress.yaml  networkPolicy.yaml  service.yaml
public/: tailwind.css
src/: bloom_create.rs  main.rs
src/downloader/: download_coordinator.rs  downloader_http.rs  mod.rs
