[package]
name = "easypwned_haveibeenpwned_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
bloomfilter = { version = "3", features = ["random"] }
anyhow = "1"
tokio = { version = "1", features = ["full"]}
clap = { version = "4", features = ["derive"] }
byteorder = "1"
hex = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "brotli", "deflate"] }
