[package]
name = "easypwned"
version = "0.29.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"]}
serde = "1"
serde_json = "1"
serde_derive = "1"
sha-1 = "0.10"
base16ct = { version = "1", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
easypwned_bloom = {path = "../easypwned_bloom"}

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"
bloomfilter = "3"
